# kalman-clib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Kalman/: Kalman.vcxproj  Kalman.vcxproj.filters  README.md  cholesky.c  cholesky.h  compiler.h  kalman.c  kalman.h  kalman_example.c  kalman_example_ballistic.c  kalman_example_gravity.c  kalman_example_gravity.h  kalman_factory.h  kalman_factory_cleanup.h  kalman_factory_filter.h  kalman_factory_filter_init.h  kalman_factory_init.h  kalman_factory_measurement.h  kalman_factory_measurement_init.h  main.c  matrix.c  matrix.h  matrix_unittests.c  matrix_unittests.h
cmake/: kalman_clibConfig.cmake.in
include/: cholesky.h  compiler.h  kalman.h  kalman_factory_cleanup.h  kalman_factory_filter.h  kalman_factory_measurement.h  matrix.h
src/: cholesky.c  kalman.c  kalman_example.c  kalman_example_gravity.c  kalman_example_gravity.h  main.c  matrix.c  matrix_unittests.c  matrix_unittests.h
